# braintrust-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TESTING_OTEL.md
.github/workflows/: ci.yml
.plan/: RUBY_DONE.md  RUBY_PLAN.md  RUBY_TODO.md  RUST_DONE.md  RUST_PLAN.md  RUST_TODO.md
braintrust-sdk/: Cargo.toml
braintrust-sdk/src/: client.rs  error.rs  lib.rs  logger.rs  memory_logger.rs  queue.rs  span.rs  test_helpers.rs  types.rs
braintrust-sdk/src/lingua/: client.rs  error.rs  mod.rs
braintrust-sdk/tests/: diagnostic_test.rs  integration_tests.rs  span_tests.rs
docs/: auto-instrumentation.md
examples/: auto_instrumentation.rs  eval_async.rs  eval_sync.rs  lingua_chat.rs  simple_trace.rs  testing_example.rs
hooks/: pre-commit
scripts/: install-hooks.sh
src/: dataset.rs  error.rs  experiment.rs  extractors.rs  http.rs  json_merge.rs  lib.rs  logger.rs  logs3.rs  prompt.rs  span.rs  span_components.rs  stream.rs  test_utils.rs  types.rs
src/api/: ai_secrets.rs  api_keys.rs  attachments.rs  brainstore_automation.rs  btql.rs  client.rs  comparisons.rs  config.rs  dataset_lookup.rs  datasets.rs  experiments.rs  function_types.rs  functions.rs  logs3.rs  macros.rs  mod.rs  project_automations.rs  project_logs.rs  projects.rs  prompts.rs  registrations.rs  session.rs  shared.rs  summaries.rs  test_support.rs  transport.rs
src/eval/: bt_runner.rs  dataset.rs  mod.rs  runner.rs  scorer.rs  task.rs  types.rs
src/experiments/: builder.rs  event_log.rs  experiment.rs  feedback.rs  metadata.rs  mod.rs  span_builder.rs  summary.rs
src/experiments/api/: comparison.rs  mod.rs  registration.rs  traits.rs
src/log_queue/: batching.rs  config.rs  http.rs  merge.rs  mod.rs  queue.rs  row_key.rs  uploader.rs  worker.rs
src/tracing_layer/: context.rs  data.rs  mod.rs  visitor.rs
tests/: api_public_contracts.rs  dataset_test.rs  eval_test.rs  experiment_test.rs  experiments.rs  http_flow.rs  logs3_uploader.rs  otel_compliance_test.rs  otel_sdk_integration_test.rs  prompt_test.rs  span_lifecycle.rs  tracing_layer_tests.rs
