[package]
name = "braintrust-sdk-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"
authors = ["Braintrust Team <team@braintrust.dev>"]
description = "Rust SDK for Braintrust logging and tracing"
repository = "https://github.com/braintrustdata/braintrust-sdk-rust"
license = "MIT OR Apache-2.0"
keywords = ["braintrust", "logging", "tracing", "observability"]
categories = ["api-bindings", "asynchronous", "development-tools"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.5.22"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
